# proxmox-yew-widget-toolkit

./: Cargo.toml  Makefile  README.md  Whitepaper.md  copyright  js-helper-module.js
debian/: changelog  control  copyright  debcargo.toml
pwt-macros/: Cargo.toml
pwt-macros/debian/: changelog  control
pwt-macros/src/: builder.rs  lib.rs  widget.rs
pwt-macros/tests/: builder.rs  widget.rs
pwt-macros/tests/builder/: invalid_type.rs  invalid_type.stderr  missing_parameters.rs  missing_parameters.stderr  missing_type.rs  missing_type.stderr  unknown_type.rs  unknown_type.stderr  wrong_cb_type.rs  wrong_cb_type.stderr  wrong_macro.rs  wrong_macro.stderr
pwt-macros/tests/widget/: duplicate_comp.rs  duplicate_comp.stderr  duplicate_crate.rs  duplicate_crate.stderr  no_clone.rs  no_clone.stderr  wrong_comp.rs  wrong_comp.stderr  wrong_crate.rs  wrong_crate.stderr  wrong_type.rs  wrong_type.stderr
src/: async_abort_guard.rs  async_pool.rs  css.rs  erc.rs  gettext_runtime_format.rs  gettext_wrapper.rs  lib.rs  runtime_fmt.rs  tr.rs  web_sys_abort_guard.rs  web_sys_ext.rs
src/component/: alert_dialog.rs  edit_window.rs  key_value_grid.rs  mod.rs  nav_menu.rs  object_grid.rs
src/dom/: align.rs  dom_size_observer.rs  dom_visibility_observer.rs  focus.rs  mod.rs  number_format.rs
src/props/: border.rs  callback_mut.rs  container_builder.rs  css.rs  css_styles.rs  event_subscriber.rs  extract_key_function.rs  field_builder.rs  field_std_props.rs  filter_function.rs  load_callback.rs  margin.rs  menu_callback.rs  mod.rs  padding.rs  pwt_space.rs  render_function.rs  selection.rs  sorter_function.rs  storage_location.rs  submit_callback.rs  widget_builder.rs  widget_std_props.rs  widget_style_builder.rs
src/state/: async_abort_guard.rs  collection.rs  data_filter.rs  data_store.rs  form_state.rs  language.rs  loader.rs  mod.rs  navigation_container.rs  persistent_state.rs  selection.rs  selection2.rs  shared_state.rs  store.rs  theme.rs
src/state/form/: context.rs  field_state.rs  mod.rs
src/state/tree_store/: keyed_slab_tree.rs  mod.rs  serde.rs  slab_tree.rs  slab_tree_serde.rs
src/touch/: adaptive_scaffold.rs  application_bar.rs  fab.rs  fab_menu.rs  gesture_detector.rs  material_app.rs  mod.rs  navigation_bar.rs  navigation_rail.rs  page_stack.rs  page_view.rs  scaffold.rs  side_dialog.rs  snack_bar.rs  snack_bar_context_extension.rs  snack_bar_manager.rs
src/touch/navigation_bar/: mod.rs  navigation_bar.rs  navigation_bar_item.rs
src/touch/scaffold/: mod.rs  scaffold_context_extension.rs  scaffold_controller.rs
src/touch/slidable/: mod.rs  slidable_action.rs  slidable_action_event.rs  slidable_controller.rs
src/widget/: action_icon.rs  alert_dialog.rs  align.rs  bar_scroll.rs  button.rs  calendar_grid.rs  card.rs  catalog_loader.rs  column.rs  confirm_dialog.rs  container.rs  data_table.rs  desktop_app.rs  dialog.rs  dom.rs  dropdown.rs  fa.rs  field_label.rs  file_button.rs  focus.rs  gesture_detector.rs  grid_picker.rs  grid_picker2.rs  image.rs  input.rs  input_panel.rs  language_selector.rs  list.rs  list_simple.rs  list_tile.rs  mask.rs  message_box.rs  meter.rs  mini_scroll.rs  mod.rs  modal.rs  nav_menu.rs  page_view.rs  panel.rs  picker.rs  (+23 more)
src/widget/canvas/: animate.rs  animate_transform.rs  circle.rs  ellipse.rs  group.rs  hyperlink.rs  line.rs  macros.rs  mod.rs  path.rs  polygon.rs  polyline.rs  rect.rs  reference.rs  text.rs  tspan.rs
src/widget/charts/: mod.rs  pie.rs  world_map.rs
src/widget/charts/map/: map_point.rs  mod.rs  zoom_info.rs
src/widget/data_table/: cell_configuration.rs  cell_render_callback.rs  column.rs  data_table.rs  events.rs  header_group.rs  header_render_callback.rs  header_state.rs  header_widget.rs  mod.rs  resizable_header.rs  row.rs  row_render_callback.rs
src/widget/data_table2/: cell_render_callback.rs  column.rs  data_table.rs  data_table_header.rs  events.rs  header_group.rs  header_menu.rs  header_render_callback.rs  header_state.rs  header_widget.rs  mod.rs  resizable_header.rs  slab_tree.rs  sorter.rs  store.rs  tree.rs  tree_filter.rs  tree_store.rs
src/widget/form/: boolean.rs  boolean2.rs  checkbox.rs  checkbox2.rs  checkbox_state_handle.rs  combobox.rs  context.rs  display.rs  field.rs  field2.rs  field_manager.rs  field_state.rs  field_state_handle.rs  form.rs  form_context.rs  hidden.rs  input.rs  managed_field.rs  mod.rs  number.rs  radio_button.rs  reset.rs  reset_button.rs  selector.rs  selector2.rs  submit.rs  submit_button.rs  submit_callback.rs  submit_validate.rs  textarea.rs  tristate_boolean.rs  validate.rs
src/widget/form/date_field/: date_field.rs  date_panel.rs  mod.rs  plain_date.rs
src/widget/form2/: checkbox.rs  combobox.rs  context.rs  field.rs  field_state.rs  form.rs  form_context.rs  mod.rs  reset.rs  reset_button.rs  selector.rs  submit.rs  submit_button.rs  submit_callback.rs  text_field_state.rs  validate.rs
src/widget/list/: list_tile.rs  list_tile_observer.rs  mod.rs
src/widget/menu/: menu_button.rs  menu_checkbox.rs  menu_checkbox2.rs  menu_event.rs  menu_item.rs  menu_popper.rs  mod.rs  split_button.rs
src/widget/nav/: mod.rs  navigation_drawer.rs  navigation_panel.rs
src/widget/slidable/: mod.rs  slidable_action.rs  slidable_action_event.rs
src/widget/tab/: mod.rs  tab_bar.rs  tab_bar_item.rs  tab_panel.rs
