[package]
name = "pwt"
version = "0.2.0"
edition = "2021"
authors = ["Dietmar Maurer <dietmar@proxmox.com>"]
license = "MIT OR Apache-2.0"
description = "Widgets for yew."
keywords = ["web", "webasm", "javascript"]
readme = "README.md"

exclude = ["debian"]

[workspace]
exclude = ["build"]
members = [
  "pwt-macros",

  # Examples

  "examples/counter",
  "examples/demo",
  "examples/form",
  "examples/loader",
  "examples/mobile",
  "examples/mobile2",
  "examples/themes",
]

[dependencies]
anyhow = "1.0"
derivative = "2.2.0"
# If you need to use the development version of Yew
# yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
# yew-router = { git = "https://github.com/yewstack/yew/" }
yew = { version = "0.20", features = ["csr"] }
yew-router = { version = "0.17" }
web-sys = { version = "0.3", features = [
  "DomRect",
  "DomStringMap",
  "DomTokenList",
  "Element",
  "HtmlCollection",
  'Headers',
  "NodeList",
  "Storage",
  'Request',
  'RequestInit',
  'RequestCredentials',
  'RequestMode',
  'Response',
  'Window',
  "MediaQueryList",
  "CssStyleDeclaration",
  "ScrollToOptions",
  "ScrollIntoViewOptions",
  "ScrollLogicalPosition",
  "IntersectionObserver",
  "IntersectionObserverEntry",
  "KeyboardEventInit",
] }
js-sys = "0.3"
log = "0.4.6"
indexmap = { version = "1", features = ["std"] }
slab = "0.4"
wasm-bindgen = { version = "0.2" }
serde-wasm-bindgen = "0.4"
wasm-logger = "0.2"
gloo-events = "0.1"
gloo-timers = "0.2"
gloo-history = "0.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
url = "2.1"
percent-encoding = "2.1"
gettext = "0.4"

pwt-macros = { version = "0.1", path = "pwt-macros" }

# proxmox-schema = { version = "1", optional = true }

[features]
default = []
# disable this feature for now, because cargo always depend on proxmox-schema
#proxmox-schema = [ "dep:proxmox-schema" ]
