[package]
name = "pwt"
version = "0.6.5"
edition = "2021"
authors = [
  "Dietmar Maurer <dietmar@proxmox.com>",
  "Dominik Csapak <d.csapak@proxmox.com>"
]
license = "MIT OR Apache-2.0"
description = "Widgets for yew."
keywords = ["web", "webasm", "javascript"]
readme = "README.md"

exclude = ["debian"]

[workspace]
exclude = ["build"]
members = ["pwt-macros"]

[dependencies]
anyhow = "1.0"
derivative = "2.2.0"
futures = { version = "0.3", default-features = false, features = ["std"] }
# If you need to use the development version of Yew
# yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
# yew-router = { git = "https://github.com/yewstack/yew/" }
yew = { version = "0.21", features = ["csr"] }
yew-router = { version = "0.18" }
web-sys = { version = "0.3", features = [
  "AbortController",
  "DomRect",
  "DomStringMap",
  "DomTokenList",
  "Element",
  "HtmlCollection",
  'Headers',
  "NodeList",
  "Storage",
  'Request',
  'RequestInit',
  'RequestCredentials',
  'RequestMode',
  'Response',
  'Window',
  "MediaQueryList",
  "CssStyleDeclaration",
  "ScrollToOptions",
  "ScrollIntoViewOptions",
  "ScrollLogicalPosition",
  "IntersectionObserver",
  "IntersectionObserverEntry",
  "KeyboardEventInit",
  "Touch",
  "TouchList",
] }
js-sys = "0.3"
log = "0.4.6"
indexmap = { version = ">= 1.9", features = ["std"] }
slab = "0.4"
wasm-bindgen = { version = "0.2" }
serde-wasm-bindgen = "0.5"
wasm-logger = "0.2"
gloo-events = "0.2"
gloo-timers = "0.3"
gloo-history = "0.2"
gloo-utils = "0.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
url = "2.1"
percent-encoding = "2.1"
gettext = "0.4"

pwt-macros = { version = "0.4", path = "pwt-macros" }
